# ai-application-testing

./: .common.mk  .console-colors.mk  .gitignore  .llm.mk  .website.mk  GITHUB_PAGES.md  Gemfile  Makefile  README.md  pylintrc.toml  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md.save  bug_report.yaml  code_change.yaml  docs_website_change.yaml  generic_issue.yaml  question.yaml
.github/PULL_REQUEST_TEMPLATE/: docs_website_pr.md  general_code_pr.md
.github/workflows/: ci.yml  collect_metrics.yaml
blogs/: README.md  blogpost-v020.md
docs/: _config.yml  about.markdown  contributing.markdown  glossary.markdown  glossary2.markdown  index.markdown  references.markdown  testing-problems.markdown  working-example.markdown
docs/_includes/: header_buttons_custom.html
docs/_layouts/: default.html
docs/_sass/custom/: custom.scss
docs/advanced-techniques/: eliminate-source-code.markdown  from-testing-to-tuning.markdown  index.markdown  notes-on-tuning.markdown  sdd.markdown
docs/arch-design/: component-design.markdown  index.markdown  tdd.markdown
docs/architecture-design/: component-design.markdown  coupling-cohesion.markdown  index.markdown  tdd.markdown
docs/assets/images/: Developer to AI Expert Spectrum V1.0 - dark background.drawio  Developer to AI Expert Spectrum V1.0.drawio  Developer to Data Scientist Spectrum V1.0.drawio  prompt-routing.drawio
docs/files/llm/: q-and-a_patient-chatbot-prescriptions-with-examples.yaml  q-and-a_patient-chatbot-prescriptions.yaml
docs/files/llm/templates/: q-and-a_patient-chatbot-prescriptions-with-examples.yaml  synthetic-q-and-a_patient-chatbot-non-prescription-refills.yaml  (+1 more)
docs/files/scripts/: refill-chatbot.sh  unit-benchmark-data-synthesis.sh
docs/future-ideas/: eliminate-source-code.markdown  from-testing-to-tuning.markdown  index.markdown  notes-on-tuning.markdown  sdd.markdown
docs/testing-strategies/: coupling-cohesion.markdown  external-verification.markdown  from-testing-to-training.markdown  from-testing-to-tuning.markdown  index.markdown  llm-as-a-judge.markdown  statistical-evaluation.markdown  statistical-tests.markdown  systems-testing.markdown  testing-agents.markdown  testing-strategies.markdown  unit-benchmarks.markdown
docs/testing-strategies/testing-agents/: agent-tools.markdown  building-agents.markdown  evaluating-agents.markdown  index.markdown
src/: Makefile
src/apps/chatbot/: __init__.py  appointment_tool.py  chatbot.py  chatbot_agent.py  chatbot_shell.py  chatbot_simple.py  main.py  response_handler.py  response_parser.py
src/common/: collections.py  file_persistent_storage.py  json_yaml.py  utils.py
src/data/examples/: synthetic-q-and-a_patient-chatbot-non-prescription-refills-data.yaml
src/langflow/: README.md  synthesizer_component.py  unit_benchmark_flow.py
src/llm/templates/: q-and-a_patient-chatbot-prescriptions-with-examples.yaml  q-and-a_patient-chatbot-prescriptions.yaml  synthetic-q-and-a_patient-chatbot-emergency.yaml  synthetic-q-and-a_patient-chatbot-non-prescription-refills.yaml  synthetic-q-and-a_patient-chatbot-prescription-refills.yaml
src/prompts/templates/: patient-chatbot.yaml  q-and-a_patient-chatbot-prescriptions-with-examples.yaml  q-and-a_patient-chatbot-prescriptions.yaml  synthetic-q-and-a_patient-chatbot-data-validation.yaml  synthetic-q-and-a_patient-chatbot-emergency.yaml  synthetic-q-and-a_patient-chatbot-non-prescription-refills.yaml  synthetic-q-and-a_patient-chatbot-prescription-refills.yaml
src/scripts/: tdd-example-refill-chatbot.py  tdd-example-refill-chatbot.sh  unit-benchmark-data-synthesis.py  unit-benchmark-data-synthesis.sh  unit-benchmark-data-validation.py  unit-benchmark-data-validation.sh  utils.py
src/tests/common/: test_collections.py  test_utils.py
src/tests/data/: README.md  appointments-qna-jsonl  appointments-scenario.json  appointments.jsonl  check-test-data.sh  emergencies-qna.jsonl  emergencies.jsonl  others-qna.jsonl  others.jsonl  prescriptions.jsonl
src/tests/utils/: hypothesis.py
src/tools/: README.md  tdd-example-refill-chatbot.py  unit-benchmark-data-synthesis.py  unit-benchmark-data-validation.py  unit_benchmark.py
src/tools/langflow/: README.md  Unit-Benchmark-Data-Synthesis.json  synthesizer_component.py  unit_benchmark_flow.py
(+113 files in other folders)
