[project]
name = "ai_application_testing"
version = "0.5.0"
description = "Code and documentation for the AI Alliance user guide and tools for 'Testing Generative AI Agent Applications'."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gnureadline>=8.3.3",
    "rich>=15.0.0",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "deepagents>=0.6.11",
    "langchain-ollama>=1.1.0",
    "openai>=2.43.0",
    "litellm>=1.89.3",
    "levenshtein>=0.27.3",
    "fastmcp>=3.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = [
  "setuptools>=82.0.1",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.155.7",
    "pytest>=9.1.1",
    "pylint>=4.0.6",
    "black>=26.5.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ty.src]
include = ["src"]
exclude = ["src/tools/langflow"]
